feat: richiesta amicizia accetta username invece di recipientId
